os/bluestore: fix no deferred writing

Fixes: https://tracker.ceph.com/issues/56488

Signed-off-by: Igor Fedotov <igor.fedotov@croit.io>